--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mycure/vue-jitsi-meet": "0.0.7",
     "axios": "^0.24.0",
     "chart.js": "2.7.2",
     "core-js": "^3.6.5",
